msdk: error message "gst_buffer_unmap: assertion 'GST_IS_BUFFER (buffer)" occurs during decoding
System Environment
- Platform: KBL
- Arch: x86_64
- Kernel: 4.18.0+
- libva commit 566a1388b4e5961fb73d0fd03058d50c5965a7f4
- media_driver commit 8968471978818839fed845ce918843a9ef3210c9
- mediasdk commit 750cfb4776023fb5a9b2481c1bf1956ab5568651
- gstreamer master branch 74b9e72ec6b0963661c5c370e634f6fc9444057f
- gst-plugin-bad commit 2f05ee9b
Reproduce Steps
- gst-launch-1.0 -vf filesrc location=/media_stream/assets/yuv/1080p_blue_sky_1920x1080_I420.yuv num-buffers=150 ! rawvideoparse format=i420 width=1920 height=1080 framerate=25 ! videoconvert ! video/x-raw,format=NV12 ! msdkh264enc rate-control=cbr bitrate=1000 gop-size=12 num-slices=4 b-frames=0 hardware=true ! video/x-h264,profile=high ! h264parse ! filesink location=./test.h264
- gst-launch-1.0 -vf filesrc location=./test.h264 ! h264parse ! msdkh264dec hardware=true ! videoconvert ! video/x-raw,format=I420 ! fakesink
- error message info (gst-launch-1.0:25628): GStreamer-CRITICAL **: gst_buffer_unmap: assertion 'GST_IS_BUFFER (buffer)' failed
Edited by wangzhanjun